Site plano de negócio

--- a/app.html
+++ b/app.html
@@ -35,7 +35,7 @@
          Fontes de Receitas
         </a>
         <div class="dropdown-menu mt-5" aria-labelledby="dropdownMenuLink">
-         <a class="dropdown-item" href="#">Alguma ação</a>
+         <a class="dropdown-item" href="Adm.html"> Análise de mercado </a>
          <a class="dropdown-item" href="#">Outra ação</a>
          <a class="dropdown-item" href="contato.html"> Contato </a>
         </div>
@@ -63,9 +63,9 @@
          Fontes de Receitas
         </a><br>
         <div class="dropdown-menu mt-5" aria-labelledby="dropdownMenuLink">
-         <a class="dropdown-item" href="#"> Análise de mercado </a>
+         <a class="dropdown-item" href="Adm.html"> Análise de mercado </a>
          <a class="dropdown-item" href="#">Outra ação</a>
-         <a class="dropdown-item" href="#"> Contato </a>
+         <a class="dropdown-item" href="contato.html"> Contato </a>
         </div>
         <button type="button" class="btn btn-outline-primary pt-2 pb-2 pl-5 pr-5 mt-2"> Saiba mais </button> 
        </div>
