--- a/mark.html
+++ b/mark.html
@@ -31,11 +31,11 @@
         <a class="mr-3 link-menu" href="app.html"> Empresa </a>
         <a class="mr-3 link-menu" href="app.html"> Dirigentes </a>
         <a class="mr-3 link-menu" href="app.html"> Negócio </a>
-        <a class="btn-white dropdown-toggle mr-3 link-menu" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="btn-white dropdown-toggle mr-3 link-menu" href="app.html" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
          Fontes de Receitas
         </a>
         <div class="dropdown-menu mt-5" aria-labelledby="dropdownMenuLink">
-         <a class="dropdown-item" href="Adm.html">Alguma ação</a>
+         <a class="dropdown-item" href="Adm.html"> Análise de mercado </a>
          <a class="dropdown-item" href="mark.html"> Marketing </a>
          <a class="dropdown-item" href="contato.html"> Contato </a>
         </div>
@@ -54,11 +54,11 @@
      <div class="row row-mobile link-menu-mobile" id="link-menu-mobile">
       <div class="col-md-12">
        <div class="pt-5 pl-5">
-        <a class="mr-3 link-menu" href="app.html"> Caracteristicas </a><br>
-        <a class="mr-3 link-menu" href="app.html"> Empresa </a><br>
-        <a class="mr-3 link-menu" href="app.html"> Empresa </a><br>
-        <a class="mr-3 link-menu" href="app.html"> Dirigentes </a><br>
-        <a class="mr-3 link-menu" href="app.html"> Negócio </a><br>
+        <a class="mr-3 link-menu"> Caracteristicas </a><br>
+        <a class="mr-3 link-menu"> Empresa </a><br>
+        <a class="mr-3 link-menu"> Empresa </a><br>
+        <a class="mr-3 link-menu"> Dirigentes </a><br>
+        <a class="mr-3 link-menu"> Negócio </a><br>
         <a class="btn-white dropdown-toggle mr-3 link-menu" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
          Fontes de Receitas
         </a><br>
@@ -73,22 +73,23 @@
      </div>
     </header>
 
-    <section class="container-fluid text-center pb-5 pt-5 background-image8">
-     <div class="row pt-5 pb-5">
-      <div class="col-lg-6 offset-3">
-       <input type="text" class="form-control mt-3 height-3" id="nome" placeholder="Nome completo" />
-       <small class="text-danger d-none" id="erro2"> Esse campo é obrigatório </small>
-       <input type="email" class="form-control mt-3 height-3" id="email" placeholder="Seu email" />
-       <small class="text-danger d-none" id="erro"> Esse campo deve ser um e-mail válido </small>
-       <input type="text" class="form-control mt-3 height-3" id="telefone" placeholder="Numero de telefone" />
-       <textarea class="height-8 form-control mt-3" id="mensagem" placeholder="Mensagem"></textarea>
-       <small class="text-success d-none" id="sucesso"> Email enviado com sucesso </small>
-       <button class="btn btn-lg btn-block botao" id="enviar"><b>  Enviar </b></button>
-       <div class="spinner-border text-danger mt-4 d-none" id="carregando"></div>
+    <section class="container-fluid height-42">
+     <div class="container container-padding-left">
+      <div class="row">
+       <div class="col-lg-12">
+        <h2 class="titulo-t-sessao"> Plano de Marketing </h2>
+        <p class="descricao-t-sessao pt-3">
+         A empresa Alpha está com uma forte parceria com uma empresa que irá fazer uma grande divulgação diretamente na mídia,
+         nas redes socias, oferecendo uma variedade de opições de produto para melhor atender a necessidade dos nossos clientes.
+         Focando principalmente no e-commerce, possuindo várias etapas, como: Engajamento, Experiência de compra, Métodos de
+         Pagamento, Ferramentas de análise de risco, Despacho do produto, Entrega da mercadoria, Fidelização do cliente e
+         Novo engajamento.
+        </p>
+       </div>
       </div>
      </div>
     </section>
-
+  
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
