--- a/app.html
+++ b/app.html
@@ -36,7 +36,7 @@
         </a>
         <div class="dropdown-menu mt-5" aria-labelledby="dropdownMenuLink">
          <a class="dropdown-item" href="Adm.html"> Análise de mercado </a>
-         <a class="dropdown-item" href="#">Outra ação</a>
+         <a class="dropdown-item" href="mark.html"> Marketing </a>
          <a class="dropdown-item" href="contato.html"> Contato </a>
         </div>
        </div>
@@ -64,7 +64,7 @@
         </a><br>
         <div class="dropdown-menu mt-5" aria-labelledby="dropdownMenuLink">
          <a class="dropdown-item" href="Adm.html"> Análise de mercado </a>
-         <a class="dropdown-item" href="#">Outra ação</a>
+         <a class="dropdown-item" href="mark.html"> Marketing </a>
          <a class="dropdown-item" href="contato.html"> Contato </a>
         </div>
         <button type="button" class="btn btn-outline-primary pt-2 pb-2 pl-5 pr-5 mt-2"> Saiba mais </button> 
